# produckai-mcp-server

./: .cspell.json  .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  INSTALLATION.md  INTEGRATIONS.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  pyproject.toml  setup.py  verify.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
demo-data/: README.md  customers.json  feedback.csv
docs/: END_TO_END_WORKFLOW.md  OPEN_SOURCE_ROADMAP.md  PRD_GENERATION_PROMPT.md
examples/: config.yaml.example
scripts/: generate_demo_data.py
src/produckai_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py
src/produckai_mcp/ai/: __init__.py  bot_filter.py  customer_matcher.py  feedback_classifier.py
src/produckai_mcp/analysis/: __init__.py  prd_generator.py  voc_scorer.py
src/produckai_mcp/api/: __init__.py  client.py  models.py
src/produckai_mcp/integrations/: __init__.py  gdrive_client.py  jira_client.py  oauth_handler.py  slack_client.py  zoom_client.py
src/produckai_mcp/processors/: __init__.py  base.py  gdocs_processor.py  gsheets_processor.py  pdf_processor.py
src/produckai_mcp/state/: __init__.py  database.py  job_manager.py  sync_state.py
src/produckai_mcp/tools/: __init__.py
src/produckai_mcp/tools/ingestion/: __init__.py  gdrive.py  jira.py  manual.py  slack.py  zoom.py
src/produckai_mcp/tools/prd/: __init__.py  generation.py
src/produckai_mcp/tools/processing/: __init__.py  clustering.py
src/produckai_mcp/tools/query/: __init__.py  feedback.py  insights.py
src/produckai_mcp/tools/voc/: __init__.py  scoring.py
src/produckai_mcp/utils/: __init__.py  logger.py
tests/: __init__.py
tests/unit/: test_config.py  test_database.py
